--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: gluster-metrics-exporter
-version: 0.2.4
+version: 0.2.5
 
 authors:
   - Kadalu.io <engineering@kadalu.io>
@@ -16,7 +16,8 @@ dependencies:
     github: kemalcr/kemal
 
   glustercli:
-    github: aravindavk/glustercli-crystal
+    github: mpetke/glustercli-crystal
+    branch: test
 
 targets:
   gluster-metrics-exporter:
